fixed horizontal scrolling issues

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 :root {
   color: white;
+  font-family: "Poppins", sans-serif;
 }
 
 .underline-red { 
